# libvmm

./: CMakeLists.txt  LICENSE  PreLoad.cmake  README.md
cmake/: init_build.cmake
cmake/config/: default.cmake
cmake/depend/: pal.cmake
cmake/function/: libvmm_add_config.cmake
cmake/toolchain/: clang.cmake
example/: CMakeLists.txt
example/bare_minimum/: CMakeLists.txt  bare_minimum_example.cpp
example/hello_world/: CMakeLists.txt  hello_world_example.cpp
example/intel/control_register/: CMakeLists.txt  control_register_example.cpp
example/intel/cpuid/: CMakeLists.txt  cpuid_example.cpp
example/intel/io_port/: CMakeLists.txt  io_port_example.cpp
example/intel/memory/: CMakeLists.txt  memory_example.cpp
example/intel/msr/: CMakeLists.txt  msr_example.cpp
example/intel/vmcall/: CMakeLists.txt  vmcall_example.cpp
example/intel/vmcs/: CMakeLists.txt  vmcs_example.cpp
example/intel/vmexit/: CMakeLists.txt  vmexit_example.cpp
include/libvmm/: libvmm.hpp  start_vmm.hpp
include/libvmm/event/: acpi_event.hpp  event.hpp  vcpu_event.hpp
include/libvmm/type/: type.hpp  vcpu_context.hpp  vcpu_delegate.hpp  vmexit_id.hpp
include/libvmm/vcpu/: execute.hpp  vcpu.hpp
include/libvmm/vcpu/x64/: general_register_x64.hpp  x64.hpp
include/libvmm/vcpu/x64/intel/: cpuid.hpp  cr0.hpp  cr3.hpp  cr4.hpp  ept.hpp  init_signal.hpp  nmi.hpp  (+14 more)
src/: CMakeLists.txt  start_vmm.cpp
src/event/: libvmm_vcpu_event.cpp
src/state_save/: vmexit_state_save.hpp  x64_gr_state_save.hpp
src/state_save/intel/: intel_vmexit_state_save_interpreter.hpp  intel_x64_gr_state_save.hpp
src/vcpu/intel/: intel_cpuid.cpp  intel_cr0.cpp  intel_cr3.cpp  intel_cr4.cpp  intel_ept.cpp  intel_execute.cpp  intel_general_register_x64.cpp  intel_init_signal.cpp  intel_instruction_pointer.cpp  intel_interrupt.cpp  intel_interrupt_window.cpp  intel_io_port.cpp  intel_monitor_trap.cpp  intel_nmi.cpp  intel_nmi_window.cpp  intel_rdmsr.cpp  intel_sipi_signal.cpp  intel_vmcall.cpp  intel_vmexit.cpp  intel_vpid.cpp  intel_wrmsr.cpp  intel_xcr0.cpp
src/vcpu_context/: intel_vcpu_context.hpp
